--- a/Projec Diva/diva.css
+++ b/Projec Diva/diva.css
@@ -1,5 +1,5 @@
 .ds4 .face {
-    background: url(https://cdn-17.anonfile.com/PaB7gaObnc/de2161c3-1579421221/dpad6.png);
+    background: url(https://github.com/unknowwiiplayer/Gamepad-Viewer-Custom-Skin-DS4-Black-DIVA/blob/master/Projec%20Diva/dpad.png?raw=true);
     position: absolute;
 }
 
