--- a/Projec Diva/diva.css
+++ b/Projec Diva/diva.css
@@ -5,7 +5,7 @@
 
 .ds4 .button {
     position: absolute;
-    background: url(https://cdn-06.anonfile.com/H3Beg6O3n3/6b831f69-1579421150/face2.png);
+    background: url(https://github.com/unknowwiiplayer/Gamepad-Viewer-Custom-Skin-DS4-Black-DIVA/blob/master/Projec%20Diva/face.png?raw=true);
 }
 
 .ds4 .button.pressed {
